# infiora-backend

./: .dockerignore  .env.example  .env.prod  .env.prod.template  .flake8  .gitignore  .pre-commit-config.yaml  DEPLOYMENT.md  Dockerfile  Infiora_API_Collection.postman_collection.json  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  ecosystem.config.dev.json  ecosystem.config.json  entrypoint.sh  mypy.ini  package.json  pyproject.toml  requirements.txt  setup-ec2.sh  tsconfig.json  tsconfig.tsbuildinfo
.github/workflows/: cd.yml  ci.yml  code-quality.yml  deploy-prod.yml  deploy.yml  main.yml  pr.yml  test.yml
core/apps/accounts/: admin.py  authentication.py  backends.py  models.py  schemas.py  serializers.py  urls.py  views.py
core/apps/health/: urls.py  views.py
core/apps/hotels/: admin.py  apps.py  models.py  permissions.py  schemas.py  serializers.py  urls.py  views.py
core/apps/users/: schemas.py  serializers.py  urls.py  views.py
core/general/: permissions.py  validators.py
core/general/utils/: settings.py
core/project/: asgi.py  urls.py
core/project/settings/: __init__.py  aws.py  base.py  channels.py  cors.py  docker.py  envvars.py  logging.py  mail.py  rest_framework.py
core/shared/: __init__.py  pagination.py  utils.py
core/shared/api/: __init__.py  schemas.py
core/shared/auth/: __init__.py
core/shared/storage/: __init__.py  uploads.py
core/shared/validation/: __init__.py
docs/: CODE_QUALITY.md  DEPLOYMENT.md  DEVELOPMENT.md  PRODUCTION_ROADMAP.md  WORKFLOWS.md
postman/: Infiora_Backend_API.postman_collection.json  User_Management_APIs.postman_collection.json
requirements/: README.md  base.txt  dev.txt  prod.txt
scripts/: README.md  cleanup.sh  setup-logrotate.sh
src/: app.ts  declaration.d.ts  index.ts
src/config/: config.ts  roles.ts
src/core/: settings.py  urls.py  views.py
src/core/settings/: __init__.py  base.py  dev.py  prod.py  test.py
src/core/templates/: health.html  metrics.html
src/keys/: config.json  firebaseKey.json  signerCert.pem  signerKey.pem
src/modules/activity/: activity.interfaces.ts  activity.model.ts  index.ts
src/modules/auth/: auth.controller.ts  auth.middleware.ts  auth.service.ts  auth.validation.ts  passport.ts
src/modules/batch/: batch.controller.ts  batch.interfaces.ts  batch.model.ts  batch.service.ts  batch.validation.ts  index.ts
src/modules/category/: category.controller.ts  category.interfaces.ts  category.model.ts  category.service.ts  category.validation.ts
src/modules/email/: email.service.ts
src/modules/errors/: error.test.ts  error.ts
src/modules/feedback/: feedback.interfaces.ts  feedback.model.ts  feedback.service.ts  index.ts
src/modules/group/: group.controller.ts  group.interfaces.ts  group.model.ts  group.service.ts  group.validation.ts
(+162 files in other folders)
